--- a/Missing_wide_table.ipynb
+++ b/Missing_wide_table.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNu4pWkLH32MPeJZSxwbdur",
+      "authorship_tag": "ABX9TyOQJ2XQRoGnOp3FvRo9YeEA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -789,6 +789,18 @@
       ],
       "metadata": {
         "id": "ClO7FoeyMo2G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ดูจากค่าใน Heatmap\n",
+        "1. MCAR หายไปแบบสุ่ม ข้อมูลที่หายไปไม่ขึ้นอยู่กับค่าใดค่าหนึ่งและเป็นอิสระต่อกัน (0)\n",
+        "2. MAR หายไปแบบสุ่มในบางส่วน ข้อมูลที่หายไปขึ้นอยู่กับข้อมูลหรือตัวแปรอื่นๆ แต่ไม่ขึ้นอยู่กับค่าหรือตัวแปรของกลุ่มตัวเอง (เข้าใกล้ -1)\n",
+        "3. MNAR หายไปแบบไม่สุ่ม ค่าของข้อมูลที่หายไปขึ้นอยู่กับค่าของข้อมูลในกลุ่มหรือตัวแปรเดียวกัน หรือรวมถึงตัวแปรอื่น ๆ ด้วย (เข้าใกล้ 1)"
+      ],
+      "metadata": {
+        "id": "SjG5Xzzqqnft"
       }
     }
   ]
