--- a/Missing_wide_table.ipynb
+++ b/Missing_wide_table.ipynb
@@ -47,14 +47,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NJymYqr9L6OG",
-        "outputId": "35a91a90-d205-4c58-ed85-29f14fb5b59e"
+        "outputId": "fb7a9b37-419f-401c-ef7a-62b7ed07b94e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -71,12 +71,12 @@
         "df.head()"
       ],
       "metadata": {
+        "id": "UEksr-87L9lj",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
         },
-        "id": "UEksr-87L9lj",
-        "outputId": "4bf96dbc-1204-4b72-9e20-a335ae6c2edc"
+        "outputId": "6c93d448-9dfb-4517-8759-d87affc0d7db"
       },
       "execution_count": null,
       "outputs": [
@@ -130,7 +130,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea48ae44-6588-4fe5-a1e0-50b923b20740\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4e207d6a-852a-4ee3-978c-46b2a55d8942\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -300,7 +300,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea48ae44-6588-4fe5-a1e0-50b923b20740')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4e207d6a-852a-4ee3-978c-46b2a55d8942')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -352,12 +352,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ea48ae44-6588-4fe5-a1e0-50b923b20740 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4e207d6a-852a-4ee3-978c-46b2a55d8942 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ea48ae44-6588-4fe5-a1e0-50b923b20740');\n",
+              "        const element = document.querySelector('#df-4e207d6a-852a-4ee3-978c-46b2a55d8942');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -377,8 +377,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7bab1797-c583-4043-abe2-5c782603ec88\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7bab1797-c583-4043-abe2-5c782603ec88')\"\n",
+              "<div id=\"df-69b4058b-a0e5-4ad5-b28e-a8aba4311059\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-69b4058b-a0e5-4ad5-b28e-a8aba4311059')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -497,7 +497,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7bab1797-c583-4043-abe2-5c782603ec88 button');\n",
+              "        document.querySelector('#df-69b4058b-a0e5-4ad5-b28e-a8aba4311059 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -508,7 +508,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 13
         }
       ]
     },
@@ -519,11 +519,11 @@
         "print(missing)"
       ],
       "metadata": {
+        "id": "8WXfF3JnNUrC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8WXfF3JnNUrC",
-        "outputId": "b0f0277f-699d-48ac-b9e0-a3386142333b"
+        "outputId": "0f8a430a-b7ff-4980-8146-0eca12ecbe23"
       },
       "execution_count": null,
       "outputs": [
@@ -554,11 +554,11 @@
         "mis_value_percent"
       ],
       "metadata": {
+        "id": "ozDP-4w9N519",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ozDP-4w9N519",
-        "outputId": "748c46eb-4cc4-4b68-91b1-3784faf5aa76"
+        "outputId": "9d88f781-f95e-447b-9f4b-dcf9eaea949b"
       },
       "execution_count": null,
       "outputs": [
@@ -581,7 +581,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 15
         }
       ]
     },
@@ -592,12 +592,12 @@
         "msno.bar(df)\n"
       ],
       "metadata": {
+        "id": "zQLZExMAOIAE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "zQLZExMAOIAE",
-        "outputId": "798831f1-6ec3-4b22-c47e-93ba58977765"
+        "outputId": "41e96b03-3361-45a1-a0a6-8f6d658ce8e6"
       },
       "execution_count": null,
       "outputs": [
@@ -609,7 +609,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -629,12 +629,12 @@
         "msno.matrix(df)"
       ],
       "metadata": {
+        "id": "Mo0yTLh1OzXi",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 871
+          "height": 470
         },
-        "id": "Mo0yTLh1OzXi",
-        "outputId": "da975764-a53f-44da-d1b1-77fb76aaeeee"
+        "outputId": "ac223895-5a36-4ce0-87cb-f10e02293b6a"
       },
       "execution_count": null,
       "outputs": [
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -687,12 +687,12 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "UKDhxloqP1oi",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "UKDhxloqP1oi",
-        "outputId": "7c064634-6046-4081-a46d-d21f742a2af0"
+        "outputId": "ac15ef29-1c69-4c31-d519-c719b651d022"
       },
       "execution_count": null,
       "outputs": [
@@ -714,25 +714,10 @@
         "len(df.columns)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vOqQwfU6QpqS",
-        "outputId": "ef7bc7e2-7727-44e6-b196-34ed6e1fdf88"
+        "id": "vOqQwfU6QpqS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "94"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -741,12 +726,12 @@
         "msno.dendrogram(df)"
       ],
       "metadata": {
+        "id": "52phK9Fq1ewW",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "52phK9Fq1ewW",
-        "outputId": "365d9b7c-155a-4a0a-cb25-33f8840ec0ce"
+        "outputId": "60251f3f-218f-4045-81ff-1c991efb00c2"
       },
       "execution_count": null,
       "outputs": [
@@ -758,7 +743,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
