--- a/Count_Misssing value.ipynb
+++ b/Count_Misssing value.ipynb
@@ -2455,37 +2455,40 @@
         "# เพิ่มคอลัมน์ 'eGFR_Category' จาก index\n",
         "df_eGFR_count['eGFR_Category'] = df_eGFR_count.index\n",
         "\n",
+        "# สลับตำแหน่งคอลัมน์ 'eGFR_Category' ขึ้นไปอยู่ที่ตำแหน่งแรกของ DataFrame\n",
+        "df_eGFR_count = df_eGFR_count[['eGFR_Category', 'Count']]\n",
+        "\n",
         "# จัดลำดับ DataFrame ตาม 'eGFR_Category'\n",
         "df_eGFR_count_sorted = df_eGFR_count.sort_values(by='eGFR_Category').reset_index(drop=True)\n",
         "\n",
-        "# แสดง DataFrame ที่เรียงลำดับตาม 'eGFR_Category'\n",
+        "# แสดง DataFrame ที่เรียงลำดับตาม 'eGFR_Category' และมี 'eGFR_Category' ขึ้นก่อน\n",
         "df_eGFR_count_sorted"
       ],
       "metadata": {
-        "id": "DQzzsttWiwjN",
-        "outputId": "753b6d1b-7536-48a6-e437-9121abbe7aad",
+        "id": "WsUmn2iqnutX",
+        "outputId": "1c79a642-7848-495d-8b33-f8621bafc5e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
         }
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   Count eGFR_Category\n",
-              "0   1759     ระยะที่ 1\n",
-              "1  19996     ระยะที่ 2\n",
-              "2  19036    ระยะที่ 3a\n",
-              "3   8348    ระยะที่ 3b\n",
-              "4   2684     ระยะที่ 4\n",
-              "5    797     ระยะที่ 5"
+              "  eGFR_Category  Count\n",
+              "0     ระยะที่ 1   1759\n",
+              "1     ระยะที่ 2  19996\n",
+              "2    ระยะที่ 3a  19036\n",
+              "3    ระยะที่ 3b   8348\n",
+              "4     ระยะที่ 4   2684\n",
+              "5     ระยะที่ 5    797"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5c84b298-e601-43f8-a4fd-8a77ee38088e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-81fa8325-6ef3-4216-a49d-c2711de876da\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2504,40 +2507,40 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Count</th>\n",
               "      <th>eGFR_Category</th>\n",
+              "      <th>Count</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1759</td>\n",
               "      <td>ระยะที่ 1</td>\n",
+              "      <td>1759</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>19996</td>\n",
               "      <td>ระยะที่ 2</td>\n",
+              "      <td>19996</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>19036</td>\n",
               "      <td>ระยะที่ 3a</td>\n",
+              "      <td>19036</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>8348</td>\n",
               "      <td>ระยะที่ 3b</td>\n",
+              "      <td>8348</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2684</td>\n",
               "      <td>ระยะที่ 4</td>\n",
+              "      <td>2684</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>797</td>\n",
               "      <td>ระยะที่ 5</td>\n",
+              "      <td>797</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2545,7 +2548,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c84b298-e601-43f8-a4fd-8a77ee38088e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81fa8325-6ef3-4216-a49d-c2711de876da')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2597,12 +2600,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5c84b298-e601-43f8-a4fd-8a77ee38088e button.colab-df-convert');\n",
+              "        document.querySelector('#df-81fa8325-6ef3-4216-a49d-c2711de876da button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5c84b298-e601-43f8-a4fd-8a77ee38088e');\n",
+              "        const element = document.querySelector('#df-81fa8325-6ef3-4216-a49d-c2711de876da');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2622,8 +2625,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d1a00972-fc11-4d45-b47f-d3c94da2a15d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d1a00972-fc11-4d45-b47f-d3c94da2a15d')\"\n",
+              "<div id=\"df-5d9f4a48-3240-4e6d-81b2-08be927a2089\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d9f4a48-3240-4e6d-81b2-08be927a2089')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2742,7 +2745,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d1a00972-fc11-4d45-b47f-d3c94da2a15d button');\n",
+              "        document.querySelector('#df-5d9f4a48-3240-4e6d-81b2-08be927a2089 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2753,7 +2756,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
