--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhrsbalND+TCheCYAEiOJ7",
+      "authorship_tag": "ABX9TyP0WDu/9fnt937mx4ZIp40t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Feature Important\n",
+        "Feature Importance\n",
         "อ้างอิง : https://youtu.be/Uojkhn-EXac?si=6n7IHb0XQWt9Rj7g"
       ],
       "metadata": {
@@ -1517,6 +1517,42 @@
       ],
       "metadata": {
         "id": "S9OBmF4krsVq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "จากการทำ Feature Importance พบว่า มีทั้งหมด 27 คอลัมน์ ที่สำคัญต่อ eGFR และ Slope โดยมีคอลัมน์ดังต่อไปนี้ (เรียงตามความสำคัญจากน้อยไปมาก)\n",
+        "1. 'L4-Sodium'\n",
+        "2. 'L21-Cholesterol'\n",
+        "3. 'L6-Chloride'\n",
+        "4. 'L23-LDL-Cholesterol',\n",
+        "5. 'L5-Potassium'\n",
+        "6.  'Sex'\n",
+        "7. 'L22-Triglyceride'\n",
+        "8. 'L12-Hemoglobin'\n",
+        "9.  'BSA',\n",
+        "10. 'L24-HDL-Cholesterol'\n",
+        "11. 'Diastolic-BP'\n",
+        "12. 'L13-Hematocrit'\n",
+        "13. 'L19-Blood-sugar'\n",
+        "14. 'L20-HbA1c'\n",
+        "15. 'BMI'\n",
+        "16. 'L11-Albumin'\n",
+        "17. 'L8-Uric'\n",
+        "18.  'L9-Calcium'\n",
+        "19. 'L15-Platelet'\n",
+        "20. 'Systolic-BP'\n",
+        "21. 'L14-WBC'\n",
+        "22.  'L2-BUN',\n",
+        "23. 'L7-Bicarbonate'\n",
+        "24. 'L28-UrineProtein-Cr-ratio'\n",
+        "25.  'L10-Phosphorus'\n",
+        "26. 'Age'\n",
+        "27. 'L3-Creatinine'"
+      ],
+      "metadata": {
+        "id": "ISsLcAiZtQDJ"
       }
     },
     {
