Lasso_Feature Importance

--- a/#LassoRegression_Feature_Importance.ipynb
+++ b/#LassoRegression_Feature_Importance.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,12 +87,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "3yfMQye8CEac",
-        "outputId": "ca6972e6-c323-4281-aa91-46b8c654d09b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        }
+        },
+        "id": "3yfMQye8CEac",
+        "outputId": "ca6972e6-c323-4281-aa91-46b8c654d09b"
       },
       "execution_count": 73,
       "outputs": [
@@ -604,11 +605,11 @@
         "print(string_columns)"
       ],
       "metadata": {
-        "id": "pWS5_7mvEW4A",
-        "outputId": "ade71024-7023-4b62-f3d9-0e3bb016d7a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pWS5_7mvEW4A",
+        "outputId": "ade71024-7023-4b62-f3d9-0e3bb016d7a8"
       },
       "execution_count": 76,
       "outputs": [
@@ -632,11 +633,11 @@
         "print(null_columns)"
       ],
       "metadata": {
-        "id": "WWL7yic4BrJU",
-        "outputId": "5fe0a056-587d-4cfc-9618-c1c38204af29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WWL7yic4BrJU",
+        "outputId": "5fe0a056-587d-4cfc-9618-c1c38204af29"
       },
       "execution_count": 77,
       "outputs": [
@@ -1490,15 +1491,6 @@
           "execution_count": 90
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##PCA"
-      ],
-      "metadata": {
-        "id": "Z6jCWl_Jn3Fn"
-      }
     },
     {
       "cell_type": "markdown",
@@ -3041,6 +3033,74 @@
         "id": "GIKY8moYHzoj"
       },
       "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# สมมติว่า df เป็น DataFrame ที่มีคอลัมน์ 'Slopes', 'eGFR_t1', และ 'L1-eGFR'\n",
+        "# และ data เป็น DataFrame ที่มีอยู่ก่อนหน้านี้\n",
+        "\n",
+        "# เลือกคอลัมน์ 'Slopes', 'eGFR_t1', และ 'L1-eGFR' จาก DataFrame df\n",
+        "selected_columns = df[['Slopes', 'eGFR_t1', 'L1-eGFR']]\n",
+        "\n",
+        "# ตรวจสอบคอลัมน์ที่มีซ้ำกันใน DataFrame\n",
+        "duplicated_columns = selected_columns.columns[selected_columns.columns.isin(data.columns)]\n",
+        "\n",
+        "# ลบคอลัมน์ที่ซ้ำกันใน DataFrame\n",
+        "data = data.drop(columns=duplicated_columns)\n",
+        "\n",
+        "# รวม DataFrame ด้วย pd.concat()\n",
+        "data = pd.concat([data, selected_columns], axis=1)\n",
+        "\n",
+        "# แสดงคอลัมน์ใหม่ใน DataFrame data\n",
+        "print(data.columns)"
+      ],
+      "metadata": {
+        "id": "1AUSUXF5J-Ku",
+        "outputId": "3f300db9-f976-4146-9183-4e5a28eccb20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['InPatient', 'Sex', 'Age', 'BMI', 'Systolic-BP', 'L2-BUN', 'L8-Uric',\n",
+            "       'L9-Calcium', 'L10-Phosphorus', 'L11-Albumin', 'L15-Platelet',\n",
+            "       'L20-HbA1c', 'L22-Triglyceride', 'L23-LDL-Cholesterol',\n",
+            "       'L28-UrineProtein-Cr-ratio', 'G1M5-Diuretic', 'G1M6-MRA',\n",
+            "       'G2M2-Metformin', 'G3M3-Fibrate', 'G5M1-Ketoanalog-amino-acid',\n",
+            "       'D1-Hypertension', 'D4-SLE', 'D6-Rheumatoid-arthritis',\n",
+            "       'D12-Thalassemia', 'D15-Solid-malignancy', 'OutPatient', 'BSA',\n",
+            "       'L4-Sodium', 'L6-Chloride', 'L7-Bicarbonate', 'L12-Hemoglobin',\n",
+            "       'L13-Hematocrit', 'L14-WBC', 'L19-Blood-sugar', 'L24-HDL-Cholesterol',\n",
+            "       'G1M2-ARB', 'G3M1-Statin', 'G5M2-NSAIDs', 'G1M3-Dihydropyridine-CCB',\n",
+            "       'G1M1-ACEI', 'G2M3-DPP4-inhibitor', 'G4M1-Allopurinol',\n",
+            "       'G1M9-Vasodilator', 'G1M8-Alpha-blocker', 'G4M2-Febuxostat',\n",
+            "       'G1M4-Non-dihydropyridine-CCB', 'G4M3-Uricosuric-agent',\n",
+            "       'D2-Diabetes-mellitus', 'D5-Systemic-sclerosis', 'D9-HCV-infection',\n",
+            "       'D11-Heart-failure', 'D13-Kidney-stone', 'D14-Valvular-heart-disease',\n",
+            "       'Slopes', 'eGFR_t1', 'L1-eGFR'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#data.to_csv('LassoRegression_Feature.csv')"
+      ],
+      "metadata": {
+        "id": "3qTcs0yUKPvV"
+      },
+      "execution_count": 105,
       "outputs": []
     }
   ]
